Set up HTML Structure

--- a/QR/index.html
+++ b/QR/index.html
@@ -9,5 +9,22 @@
 </head>
 <body>
     
+    <main>
+        <section class="qr-card">
+            <div class="qr-card-body">
+                <figure class="qr-code">
+                    <img src="images/image-qr-code.png" alt="qr-code-img" class="qr-code-img">
+                </figure>
+                <div class="qr-code-text">
+                    <h1 class="bold-text">
+                        Improve your front-end skills by building projects
+                    </h1>
+                    <p class="regular-text">
+                        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
